fix: add align item to nav

--- a/style/style.css
+++ b/style/style.css
@@ -110,7 +110,9 @@ header{
 nav{
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
+
 
 
 
